--- a/contents/posts/2-p21.md
+++ b/contents/posts/2-p21.md
@@ -6,7 +6,7 @@ questions_number: 2
 
 question_type_1: radio
 question_1: 傍線部「あんなしんどい思い」とはどのような思いでしょうか。最も適当なものを以下から一つ選んでください。
-selector_1: 自分の願い続けてきたことが結局叶わずに終わり、つらくてたまらない思い。,和が愛するチームの優勝を堅く信じ、がんばって応援していこうという思い。,三十年間も願い続けてきたことが本当に叶うのか不安でいたたまれない思い。,死ぬ前に一度だけでもいいから愛するチームの優勝が見たいという切ない思い。
+selector_1: 自分の願い続けてきたことが結局叶わずに終わり、つらくてたまらない思い。,我が愛するチームの優勝を堅く信じ、がんばって応援していこうという思い。,三十年間も願い続けてきたことが本当に叶うのか不安でいたたまれない思い。,死ぬ前に一度だけでもいいから愛するチームの優勝が見たいという切ない思い。
 answer_1: 三十年間も願い続けてきたことが本当に叶うのか不安でいたたまれない思い。
 
 question_type_2: checkbox
