--- a/contents/posts/2-p28.md
+++ b/contents/posts/2-p28.md
@@ -23,7 +23,7 @@ paragraphs: 16
 
 「家」というのはひとの「心」に似ていて、その外側から内側のことを、あれこれ想像していてもよくわからないところがある。
 
-それで他人の家に行くと、まず、玄関でちょっと驚き、部星へあがって、またちょっと驚く。
+それで他人の家に行くと、まず、玄関でちょっと驚き、部屋へあがって、またちょっと驚く。
 
 驚くというのは、はっきりと違和感を感じるということだが、それでもたいてい、すぐに慣れてしまう。
 
