--- a/contents/posts/1-p24.md
+++ b/contents/posts/1-p24.md
@@ -6,7 +6,7 @@ questions_number: 2
 
 question_type_1: radio
 question_1: 棒線部「彼の気持ち」として最も適当なものを以下から一つ選んでください。
-selector_1: 弟に馬鹿にされて悔しくてたまらないという気持ち,弟と仲良くできなかったことを公開する気持ち,弟ばかりが特別扱いされるのを理不尽に思う気持ち,弟をいじめてしまって申し訳ないと思う気持ち
+selector_1: 弟に馬鹿にされて悔しくてたまらないという気持ち,弟と仲良くできなかったことを後悔する気持ち,弟ばかりが特別扱いされるのを理不尽に思う気持ち,弟をいじめてしまって申し訳ないと思う気持ち
 answer_1: 弟ばかりが特別扱いされるのを理不尽に思う気持ち
 
 question_type_2: checkbox
